[SPARK-36796][BUILD][CORE][SQL] Pass all `sql/core` and dependent modules UTs with JDK 17 except one case in `postgreSQL/text.sql`
### What changes were proposed in this pull request?
In order to pass the UTs related to sql/core and dependent modules, this pr mainly does the following change:

- Add a new property named `extraJavaTestArgs` to `pom.xml`, It includes all `--add-opens` configurations required for UTs with Java 17 and It also include `-XX:+IgnoreUnrecognizedVMOptions` to compatible with Java 8.
- Add a new helper class named `JavaModuleOptions` to place constant and methods related to `--add-opens`
- `--add-opens` options and `-XX:+IgnoreUnrecognizedVMOptions` is added by default when `SparkSubmitCommandBuilder` builds the submit command, this can help `local-cluster` related UTs pass and help users reduce the cost of using java 17
- `--add-opens` options and `-XX:+IgnoreUnrecognizedVMOptions` is supplemented to `spark.driver.extraJavaOptions` and `spark.executor.extraJavaOptions` when init SparkContext, this also can help UTs pass and help users reduce the cost of using java 17

### Why are the changes needed?
Pass Spark UTs with JDK 17

### Does this PR introduce _any_ user-facing change?
No

### How was this patch tested?
- Pass the Jenkins or GitHub Action
- Manual test `mvn clean install -pl sql/core -am` with Java 17, only `select format_string('%0$s', 'Hello')` in `postgreSQL/text.sql` failed due to the different behavior of Java 8 and Java 17

Closes #34153 from LuciferYang/SPARK-36796.

Authored-by: yangjie01 <yangjie01@baidu.com>
Signed-off-by: Sean Owen <srowen@gmail.com>